// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the empty state 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    loading...
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with a selected vehicle 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with routes 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with timepoints 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with vehicles 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;
